# wbc2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: wbc2_schema.pptx
examples/single_arm/: main.cpp
include/wbc2/: version.hpp  wbc2.hpp
include/wbc2/common/: constants.hpp
include/wbc2/controller/: controller.hpp
include/wbc2/robot/: manipulator.hpp  robot.hpp  yaml_parser.hpp
src/: CMakeLists.txt  main.cpp
src/controller/: controller.cpp
src/robot/: manipulator.cpp  robot.cpp  yaml_parser.cpp
test/: CMakeLists.txt  main.cpp
